--- a/drupal/sites/SBIR/themes/sbirtheme/scss/components/_footer.scss
+++ b/drupal/sites/SBIR/themes/sbirtheme/scss/components/_footer.scss
@@ -26,6 +26,7 @@
           display:inline-block;
           padding:0;
           margin:0!important;
+          margin-left:3px!important;
           a {
             text-decoration: none;
             font-weight: normal;
